
==> Problems after creating GUID 2.1 
 - Add Grid Wirzard
 - In appendConfig merge the json objects, and delete from new item
 - Problem that there is a cmp exception thrown
 - When first element is added it is not visable under select
 - First indent not working correctly by json 
 - Problem that still some code is converted to string (listener (all))
 
 Change History:
 Version 2.1.0:
  + A compressed version of designer is added (Ext.ux.guid.plugin.Desginer-all.js) 
  + Added a new json parser therefor begin and end tags are no longer needed in code
  + Visual resize added activated by context menu
  + Visual move of element in absolute layout activated by context menu
  + Added XType fallback to panel for unknown xtypes
  + All xtypes which are loaded before guidesigner is loaded are now selectable
  + Found a good solotion for property grid error
  + Split single javascript files containing multiple classes into files
  + Added "scope.!<VAR>" in json object, so you can create local objects if they don't exist
  + Toolbox is forced to do a layout before showing.
  + Changed path ExtJs version can be changed, still using 2.0.1 as base because of stablility
  + You can now add you own property editors, by setting "editor" in properties.json
  + Undo and redo are now keeping track of selected element
  + Active item is now selected in code tree
  + Codetree can now also be used beside drag drop in designer to reorganize code elements.
  + Url options can now beused to configure designer window: window=1 (shows window mode) docked=1 (will dock designer) debug=1 (compression off)
  + A error statusicon and tab have been added to show errors. Click on error icon on statusbar to show or hide detailtab
  + A simple loader for javascript and stylesheets is added (require)
  + Third party design elements can be configured (componentFiles) to be added to Components tree
  + Components can be ExtJs version dependend, just set isVersion in component config.